force-app/main/default/objects/blng__Invoice__c/fields/Balance_USD__c.field-meta.xml
<CustomField>
    <fullName>Balance_USD__c</fullName>
    <formula>IF( TEXT(CurrencyIsoCode)&lt;&gt;&apos;USD&apos;,  blng__Balance__c * Exchange_Rate__c , blng__Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>