force-app/main/default/objects/blng__Invoice__c/fields/blng__BillToContact__c.field-meta.xml
<CustomField>
    <fullName>blng__BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Bill To contact for this invoice</inlineHelpText>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (BillToContact)</relationshipLabel>
    <relationshipName>BillToContactInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>