force-app/main/default/objects/blng__Invoice__c/fields/blng__DeclinedPaymentRunCount__c.field-meta.xml
<CustomField>
    <fullName>blng__DeclinedPaymentRunCount__c</fullName>
    <label>Declined Payment Count (Payment Run)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>