force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDate__c</fullName>
    <inlineHelpText>Drives the Due Date and financial reporting period</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>