force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoicePostedDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoicePostedDate__c</fullName>
    <inlineHelpText>The date on which the invoice was posted</inlineHelpText>
    <label>Invoice Posted Date</label>
    <type>Date</type>
</CustomField>