force-app/main/default/objects/blng__Invoice__c/fields/blng__InvoiceRunCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceRunCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up relationship to the Invoice Run.Invoice is child of  Invoice Run.
This field tells from which Invoice Run the Invoice is generated.</description>
    <label>Invoice Run (Created By)</label>
    <referenceTo>blng__InvoiceRun__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>InvoiceRunInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>