force-app/main/default/objects/blng__Invoice__c/fields/blng__Order__c.field-meta.xml
<CustomField>
    <fullName>blng__Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>OrderInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>