force-app/main/default/objects/blng__Invoice__c/fields/blng__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDate__c</fullName>
    <label>Target  Date</label>
    <type>Date</type>
</CustomField>