force-app/main/default/objects/blng__Invoice__c/fields/blng__TaxErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxErrorMessage__c</fullName>
    <label>Tax Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>