force-app/main/default/objects/blng__Invoice__c/fields/Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collection_Notes__c</fullName>
    <label>Collection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>