force-app/main/default/objects/blng__Invoice__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Billing Process , Legacy Slip records without Order Products, this Contract fields will be used to create Billing Invoices.</description>
    <inlineHelpText>For Service Billing Process Legacy Slip Lines</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>