force-app/main/default/objects/blng__Invoice__c/fields/CreatedFromServiceBillingBatch__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromServiceBillingBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created From Service Billing Batch</description>
    <label>CreatedFromServiceBillingBatch?</label>
    <type>Checkbox</type>
</CustomField>