force-app/main/default/objects/blng__Invoice__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>Text(blng__Order__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>