force-app/main/default/objects/blng__Invoice__c/fields/DM_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>DM_Billing_Address__c</fullName>
    <label>DM Billing Address</label>
    <type>Address</type>
</CustomField>