force-app/main/default/objects/blng__Invoice__c/fields/Document_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Document_Generated_On__c</fullName>
    <label>Document Generated On</label>
    <type>DateTime</type>
</CustomField>