force-app/main/default/objects/blng__Invoice__c/fields/Dunning_Status__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Status__c</fullName>
    <label>Dunning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upcoming Payment Due</fullName>
            </value>
            <value>
                <fullName>Account Past Due Notice- First Reminder</fullName>
            </value>
            <value>
                <fullName>Account Past Due Notice- Second Reminder</fullName>
            </value>
            <value>
                <fullName>Termination Notice – Breach</fullName>
            </value>
            <value>
                <fullName>Notice - Cancellation Notice due to Breach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>