force-app/main/default/objects/blng__Invoice__c/fields/Expected_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolution_Date__c</fullName>
    <label>Expected Resolution Date</label>
    <type>Date</type>
</CustomField>