force-app/main/default/objects/blng__Invoice__c/fields/Invoice_Document__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Document__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;username=&quot; + $User.Username +
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid= [ParentInvoiceLine]aHxD7000000CbQTKA0,[OrderfromInvoice]aHxD7000000CbQYKA0&quot; + 
&quot;&amp;templateid=aI5D70000008P70KAE&quot; + 
&quot;&amp;fp0=1&quot; + 
&quot;&amp;ac1=Invoice Generated&quot; +
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;ofn=Invoice for &quot; +  blng__Account__c  + &quot; - &quot; + TEXT(TODAY()) +
&quot;&amp;ac0=1&quot; + 
&quot;&amp;templategroup=Invoice&quot; + 
&quot;&amp;xdo=CIA&quot; + 
&quot;&amp;xdo2=GenerateInvoice&quot; + 
&quot;&amp;geo=&quot; + $User.Country +
&quot;&amp;emailtoid=&quot; +  blng__BillToContact__r.Id  +
&quot;&amp;EmailAdditionalTo=&quot; + Additional_emails_to_send__c  +
&quot;&amp;congaemailtemplateid=aHwD700000033dYKAQ&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>Invoice Document</label>
    <type>Text</type>
</CustomField>