force-app/main/default/objects/blng__Invoice__c/fields/Invoice_Pending_Category__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Pending_Category__c</fullName>
    <label>Invoice/Pending Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services in conversation with client</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Recommend write off</fullName>
            </value>
            <value>
                <fullName>Pending update from AM</fullName>
            </value>
            <value>
                <fullName>Pending update from CSS</fullName>
            </value>
            <value>
                <fullName>Pending Order dispute/correction</fullName>
            </value>
            <value>
                <fullName>Pending Contract Change</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Pending with ClientOps/PSOps</fullName>
            </value>
            <value>
                <fullName>No Items Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>