force-app/main/default/objects/blng__Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Tax Only</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>