force-app/main/default/objects/blng__Invoice__c/fields/Latest_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Document_Id__c</fullName>
    <label>Latest Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>