force-app/main/default/objects/blng__Invoice__c/fields/NetSuite_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Document_Number__c</fullName>
    <label>NetSuite Document Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>