force-app/main/default/objects/blng__Invoice__c/fields/NetSuite_Sales_order_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sales_order_Internal_Id__c</fullName>
    <description>BIZ-47275: created for integration with NetSuite</description>
    <formula>blng__Order__r.NetSuite_Sales_order_Internal_Id__c</formula>
    <label>NetSuite Sales order Internal Id</label>
    <type>Text</type>
</CustomField>