force-app/main/default/objects/blng__Invoice__c/fields/NS_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Account_Id__c</fullName>
    <label>NS Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>