force-app/main/default/objects/blng__Invoice__c/fields/NS_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Deal_ID__c</fullName>
    <label>NS Deal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>