force-app/main/default/objects/blng__Invoice__c/fields/NS_Inv_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Inv_Document_Number__c</fullName>
    <label>NS Inv Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>