force-app/main/default/objects/blng__Invoice__c/fields/NS_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Status__c</fullName>
    <label>NS Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>