force-app/main/default/objects/blng__Invoice__c/fields/NS_Memo__c.field-meta.xml
<CustomField>
    <fullName>NS_Memo__c</fullName>
    <label>NS Memo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>