force-app/main/default/objects/blng__Invoice__c/fields/NS_PO__c.field-meta.xml
<CustomField>
    <fullName>NS_PO__c</fullName>
    <label>NS PO</label>
    <length>200</length>
    <type>Text</type>
</CustomField>