force-app/main/default/objects/blng__Invoice__c/fields/NS_Sales_Order_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NS_Sales_Order_Internal_Id__c</fullName>
    <label>NS Sales Order Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>