force-app/main/default/objects/blng__Invoice__c/fields/NS_Status__c.field-meta.xml
<CustomField>
    <fullName>NS_Status__c</fullName>
    <label>NS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid In Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>