force-app/main/default/objects/blng__Invoice__c/fields/NS_To_be_Emailed__c.field-meta.xml
<CustomField>
    <fullName>NS_To_be_Emailed__c</fullName>
    <label>NS To be Emailed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>