force-app/main/default/objects/blng__Invoice__c/fields/OA_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_ID__c</fullName>
    <description>BIZ-47312 - field to store data from Open Air</description>
    <label>OpenAir Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>