force-app/main/default/objects/blng__Invoice__c/fields/OA_Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_Subtotal__c</fullName>
    <description>BIZ-47312 - field to store data from Open Air</description>
    <label>OpenAir Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>