force-app/main/default/objects/blng__Invoice__c/fields/OA_Slip_Header__c.field-meta.xml
<CustomField>
    <fullName>OA_Slip_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OA Slip Header</label>
    <referenceTo>OA_Slip_Header__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>