force-app/main/default/objects/blng__Invoice__c/fields/OP4iDeal_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4iDeal_Id__c</fullName>
    <formula>blng__Order__r.OP4IDealID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4iDeal Id</label>
    <type>Text</type>
</CustomField>