force-app/main/default/objects/blng__Invoice__c/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <formula>blng__Order__r.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>