force-app/main/default/objects/blng__Invoice__c/fields/OSA_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>OSA_Signature_Date__c</fullName>
    <formula>blng__Order__r.OSA_Signature_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OSA Signature Date</label>
    <type>Date</type>
</CustomField>