force-app/main/default/objects/blng__Invoice__c/fields/Pause_Dunning__c.field-meta.xml
<CustomField>
    <fullName>Pause_Dunning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to pause dunning notifications (related to modification or internal error)</description>
    <inlineHelpText>Ability to pause dunning notifications (related to modification or internal error)</inlineHelpText>
    <label>Pause Dunning</label>
    <type>Checkbox</type>
</CustomField>