force-app/main/default/objects/blng__Invoice__c/fields/Pending_Intapp_Action__c.field-meta.xml
<CustomField>
    <fullName>Pending_Intapp_Action__c</fullName>
    <label>Pending Intapp Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Pending_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>