force-app/main/default/objects/blng__Invoice__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <formula>blng__Order__r.PO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>