force-app/main/default/objects/blng__Invoice__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <label>Sales Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>