force-app/main/default/objects/blng__Invoice__c/fields/SFDC_Services_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Services_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Services Project</label>
    <referenceTo>SFDC_Services_Project__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>