force-app/main/default/objects/blng__Invoice__c/fields/Subsidiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Address__c</fullName>
    <formula>CASE(TEXT(blng__Order__r.Subsidiary__c) , 
&quot;01:200 Integration Appliance (US)&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_INTAPP_Inc.Address_subsidiary__c ,
&quot;05:400 TFG - US&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_The_Frayman_Group.Address_subsidiary__c ,
&quot;06:700 Rekoop Limited (UK)&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_Rekoop.Address_subsidiary__c ,
&quot;09:750 Rekoop Pty Limited (AUS)&quot;, $CustomMetadata.Invoice_Template__mdt.Address_Rekoop.Address_subsidiary__c,
&quot;23:Gwabbit&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_gwabbit_Inc.Address_subsidiary__c ,
&quot;35:Repstor Limited&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_Repstor_Limited.Address_subsidiary__c ,
&quot;37:Repstor, Inc.&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_Repstor_Inc.Address_subsidiary__c ,
&quot;18:DealCloud, Inc.&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_DealCloud.Address_subsidiary__c ,
&quot;42:Paragon Data Labs, Inc.&quot;,  $CustomMetadata.Invoice_Template__mdt.Address_Paragon_Data_Labs.Address_subsidiary__c ,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary Address</label>
    <type>Text</type>
</CustomField>