force-app/main/default/objects/blng__Invoice__c/validationRules/Collection_Risk_Identified.validationRule-meta.xml
<ValidationRule>
    <fullName>Collection_Risk_Identified</fullName>
    <active>true</active>
    <errorConditionFormula>( ISPICKVAL(Collection_Risk__c, &quot;Customer Cannot Pay&quot;) || ISPICKVAL(Collection_Risk__c, &quot;Customer Will Not Pay&quot;) ) &amp;&amp; ISBLANK(Collection_Risk_Justification__c)</errorConditionFormula>
    <errorMessage>Need Collection Risk Justification if Customer Cannot or Will not Pay</errorMessage>
</ValidationRule>