force-app/main/default/objects/blng__Invoice__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__InvoiceStatus__c</columns>
    <columns>blng__DueDate__c</columns>
    <columns>blng__DaysOutstanding__c</columns>
    <columns>blng__StatusFlag__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>blng__InvoiceRunCreatedBy__c</columns>
    <columns>blng__TotalAmount__c</columns>
    <columns>OA_Invoice_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>blng__InvoiceStatus__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <filters>
        <field>Deal_Type__c</field>
        <operation>notEqual</operation>
        <value>Add-On</value>
    </filters>
    <label>All Invoices</label>
</ListView>