force-app/main/default/objects/blng__Invoice__c/listViews/blng__All1.listView-meta.xml
<ListView>
    <fullName>blng__All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>blng__Balance__c</columns>
    <columns>blng__DaysOutstanding__c</columns>
    <columns>blng__DueDate__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__InvoiceStatus__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>blng__InvoiceRunCreatedBy__c</columns>
    <columns>OA_Invoice_ID__c</columns>
    <columns>OA_Invoice_Subtotal__c</columns>
    <columns>blng__PaymentStatus__c</columns>
    <columns>Subsidiary_Address__c</columns>
    <columns>Subsidiary_Payment_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedFromServiceBillingBatch__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>